# AndroidMiner

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ottylab/bitzenyminer/: MainActivityTest.java
app/src/androidTest/java/org/microbitcoin/microiner/: MainActivityTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/microbitcoin/app/miner/: Utils.java  (+3 more)
app/src/main/java/org/microbitcoin/microminer/: MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: toolbar_menu.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: pref_about.xml  pref_general.xml  pref_headers.xml
app/src/test/java/org/microbitcoin/microminer/: UtilsUnitTest.java
bitzenymininglibrary/: build.gradle
bitzenymininglibrary/src/main/cpp/libcpuminer/: CMakeLists.txt  libcpuminer.c  rainforest.c  rfv2_core.c
mininglib/: CMakeLists.txt
mininglib/src/androidTest/java/com/example/ottylab/bitzenymininglibrary/: ExampleInstrumentedTest.java
mininglib/src/androidTest/java/org/microbitcoin/mininglib/: ExampleInstrumentedTest.java
mininglib/src/main/: AndroidManifest.xml
mininglib/src/main/cpp/: mininglib.cpp
mininglib/src/main/java/com/example/ottylab/bitzenymininglibrary/: MiningLibrary.java
mininglib/src/main/java/org/microbitcoin/mininglib/: MiningLibrary.java
mininglib/src/main/res/values/: strings.xml
mininglib/src/test/java/com/example/ottylab/bitzenymininglibrary/: ExampleUnitTest.java
mininglib/src/test/java/org/microbitcoin/mininglib/: ExampleUnitTest.java
(+6 files in other folders)
